# colormotor_sandbox

./: .clang-format  CMakeLists.txt  README.md  app.h  app.i  app_wrap.h  console.h  main.cpp  pyrepl.cpp  pyrepl.h  swig.sh
example_scripts/: basic.py
pycm_sandbox_gl.xcodeproj/: project.pbxproj
pycm_sandbox_gl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pycm_sandbox_gl.xcodeproj/project.xcworkspace/xcshareddata/: basic.xccheckout  feature_test.xccheckout  pycm_sandbox_gl.xccheckout
pycm_sandbox_gl.xcodeproj/project.xcworkspace/xcuserdata/colormotor.xcuserdatad/: UserInterfaceState.xcuserstate
pycm_sandbox_gl.xcodeproj/xcuserdata/colormotor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
pycm_sandbox_gl.xcodeproj/xcuserdata/colormotor.xcuserdatad/xcschemes/: app.xcscheme  xcschememanagement.plist
